--- a/about.html
+++ b/about.html
@@ -10,7 +10,8 @@
     <link href="style.css" rel="stylesheet" type="text/css" media="all">
   </head>
   <body>
-    <header>About Me:
+    <header>
+      <h1>About Me</h1>
       <p>I don't have a lot to say about myself to be honest so I'm just going to do this page when I have something to put in the My Stuff page</p>
     </header>
     <nav>
